add tenant-apps application
Signed-off-by: zoetrope <a.ikezoe@gmail.com>

--- a/argocd-config/overlays/stage0/kustomization.yaml
+++ b/argocd-config/overlays/stage0/kustomization.yaml
@@ -4,6 +4,7 @@ resources:
 - ../../base
 - ept-apps.yaml
 - maneki-apps.yaml
+- tenant-apps.yaml
 patchesStrategicMerge:
 - argocd-ingress.yaml
 - argocd.yaml
