reflect review comments
Signed-off-by: zoetrope <a.ikezoe@gmail.com>

--- a/argocd-config/overlays/stage0/tenant-apps.yaml
+++ b/argocd-config/overlays/stage0/tenant-apps.yaml
@@ -11,7 +11,7 @@ spec:
   project: default
   source:
     repoURL: https://github.com/cybozu-private/neco-tenant-apps.git
-    targetRevision: main
+    targetRevision: stage
     path: argocd-config
   destination:
     server: https://kubernetes.default.svc
