Add tenant-apps project
Signed-off-by: zoetrope <a.ikezoe@gmail.com>

--- a/argocd-config/overlays/stage0/tenant-apps.yaml
+++ b/argocd-config/overlays/stage0/tenant-apps.yaml
@@ -8,7 +8,7 @@ metadata:
   labels:
     is-tenant: "true"
 spec:
-  project: default
+  project: tenant-app-of-apps
   source:
     repoURL: https://github.com/cybozu-private/neco-tenant-apps.git
     targetRevision: stage
