--- a/team-management/base/garoon/project.yaml
+++ b/team-management/base/garoon/project.yaml
@@ -24,5 +24,6 @@ spec:
   - name: admin
     groups:
     - cybozu-private:garoon
+    - cybozu-private:maneki
     policies:
     - p, proj:garoon:admin, applications, *, garoon/*, allow
