--- a/team-management/base/ept/project.yaml
+++ b/team-management/base/ept/project.yaml
@@ -24,5 +24,6 @@ spec:
   - name: admin
     groups:
     - cybozu-private:ept
+    - cybozu-private:maneki
     policies:
     - p, proj:ept:admin, applications, *, ept/*, allow
