--- a/team-management/base/garoon/app-garoon-static.yaml
+++ b/team-management/base/garoon/app-garoon-static.yaml
@@ -16,3 +16,6 @@ subjects:
   - kind: Group
     name: garoon
     apiGroup: rbac.authorization.k8s.io
+  - kind: Group
+    name: maneki
+    apiGroup: rbac.authorization.k8s.io
