--- a/neco-admission/base/config.yaml
+++ b/neco-admission/base/config.yaml
@@ -3,6 +3,7 @@ ArgoCDApplicationValidator:
       - repository: https://github.com/cybozu-private/ept-apps.git
         projects:
           - ept
+          - maneki
           - tenant-app-of-apps
       - repository: https://github.com/cybozu-private/maneki-apps.git
         projects:
