Change validation rule for tenant-app AppProject
Signed-off-by: Masayuki Ishii <masa213f@gmail.com>

--- a/neco-admission/base/config.yaml
+++ b/neco-admission/base/config.yaml
@@ -16,4 +16,4 @@ ArgoCDApplicationValidator:
           - default
       - repository: https://github.com/cybozu-private/neco-tenant-apps.git
         projects:
-          - default
+          - tenant-apps
