--- a/team-management/base/common/elastic-rbac.yaml
+++ b/team-management/base/common/elastic-rbac.yaml
@@ -71,6 +71,9 @@ subjects:
     namespace: app-elasticsearch
   - kind: ServiceAccount
     name: elastic
+    namespace: app-monitoring-elasticstack
+  - kind: ServiceAccount
+    name: elastic
     namespace: maneki
   - kind: ServiceAccount
     name: elastic
