--- a/team-management/base/maneki/elastic-serviceaccount.yaml
+++ b/team-management/base/maneki/elastic-serviceaccount.yaml
@@ -9,3 +9,9 @@ kind: ServiceAccount
 metadata:
   name: elastic
   namespace: app-elasticsearch
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: elastic
+  namespace: app-monitoring-elasticstack
