Allow the running of Elasticsearch in app-ept-wiki
Signed-off-by: zoetrope <a.ikezoe@gmail.com>

--- a/team-management/base/common/elastic-rbac.yaml
+++ b/team-management/base/common/elastic-rbac.yaml
@@ -71,6 +71,9 @@ subjects:
     namespace: app-elasticsearch
   - kind: ServiceAccount
     name: elastic
+    namespace: app-ept-wiki
+  - kind: ServiceAccount
+    name: elastic
     namespace: app-monitoring-elasticstack
   - kind: ServiceAccount
     name: elastic
