--- a/team-management/base/maneki/elastic-serviceaccount.yaml
+++ b/team-management/base/maneki/elastic-serviceaccount.yaml
@@ -15,3 +15,9 @@ kind: ServiceAccount
 metadata:
   name: elastic
   namespace: app-monitoring-elasticstack
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: elastic
+  namespace: app-ept-wiki
