--- a/monitoring/base/kube-state-metrics/deployment.yaml
+++ b/monitoring/base/kube-state-metrics/deployment.yaml
@@ -19,6 +19,9 @@ spec:
     spec:
       containers:
       - image: k8s.gcr.io/kube-state-metrics/kube-state-metrics:v2.0.0-beta
+        args:
+        - --labels-metric-allow-list
+        - namespaces=[team],nodes=[cke.cybozu.com/rack,cke.cybozu.com/role,cke.cybozu.com/master]
         livenessProbe:
           httpGet:
             path: /healthz
