--- a/registry/templates/configmap.yaml
+++ b/registry/templates/configmap.yaml
@@ -7,7 +7,7 @@ data:
   config.yml: |-
     version: 0.1
     log:
-      level: info
+      level: debug
     storage:
       s3:
         region: "neco"
