loki: shorten termination period to avoid an alert when reboot cluster
Signed-off-by: Yuji Ito <llamerada.jp@gmail.com>

--- a/logging/base/loki.yaml
+++ b/logging/base/loki.yaml
@@ -33,6 +33,7 @@ spec:
                 secretKeyRef:
                   name: loki-bucket
                   key: AWS_SECRET_ACCESS_KEY
+      terminationGracePeriodSeconds: 300
       volumes:
         - name: config
           configMap:
