Add Teleport node Pod for maneki team.
Signed-off-by: Kazuhito MATSUDA <kazuhito.matuda@gmail.com>

--- a/secrets/base/teleport/kustomization.yaml
+++ b/secrets/base/teleport/kustomization.yaml
@@ -8,7 +8,11 @@ secretGenerator:
 - name: teleport-app-secret-20201203
   namespace: teleport
   files:
-  - teleport.yaml
+  - app/teleport.yaml
+- name: teleport-node-secret-20210309
+  namespace: teleport
+  files:
+  - node/teleport.yaml
 patches:
 - patch: |-
     apiVersion: v1
