--- a/teleport/base/kustomization.yaml
+++ b/teleport/base/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - serviceaccount.yaml
   - statefulset.yaml
   - apps
+  - nodes
 configMapGenerator:
   - name: teleport-role
     namespace: teleport
@@ -19,4 +20,4 @@ configMapGenerator:
       - conf/neco-readonly-role.yaml
 images:
   - name: quay.io/gravitational/teleport-ent
-    newTag: 5.2.1
+    newTag: 6.0.1
