Fix teleport token secret for app and node.
Signed-off-by: Kazuhito MATSUDA <kazuhito.matuda@gmail.com>

--- a/secrets/base/teleport/kustomization.yaml
+++ b/secrets/base/teleport/kustomization.yaml
@@ -5,23 +5,18 @@ secretGenerator:
   namespace: teleport
   files:
   - license.pem
-- name: teleport-app-secret-20201203
+- name: teleport-general-secret-20210310
   namespace: teleport
   files:
-  - app/teleport.yaml
-- name: teleport-node-secret-20210309
-  namespace: teleport
-  files:
-  - node/teleport.yaml
+  - teleport.yaml
 patches:
 - patch: |-
     apiVersion: v1
     kind: Secret
     metadata:
-      name: teleport-app-secret-20201203
+      name: teleport-general-secret-20210310
       namespace: teleport
       labels:
         app.kubernetes.io/name: teleport
-        app.kubernetes.io/component: app
 generatorOptions:
   disableNameSuffixHash: true
