--- a/secrets/base/teleport/teleport.yaml
+++ b/secrets/base/teleport/teleport.yaml
@@ -2,7 +2,7 @@ teleport:
   data_dir: /var/lib/teleport
   auth_servers:
     - teleport.gcp0.dev-ne.co:443
-  auth_token: teleport-node-token
+  auth_token: teleport-general-token
   log:
     output: stderr
     severity: DEBUG
