--- a/teleport/base/nodes/maneki.yaml
+++ b/teleport/base/nodes/maneki.yaml
@@ -44,7 +44,7 @@ spec:
           containerPort: 3020
         volumeMounts:
         - mountPath: /etc/teleport
-          name: teleport-node-secret
+          name: teleport-general-secret
           readOnly: true
         - mountPath: /var/lib/teleport
           name: teleport-storage
@@ -57,9 +57,9 @@ spec:
         runAsNonRoot: true
         runAsUser: 10000
       volumes:
-      - name: teleport-node-secret
+      - name: teleport-general-secret
         secret:
-          secretName: teleport-node-secret-20210309
+          secretName: teleport-general-secret-20210310
       - name: teleport-storage
         emptyDir: {}
       - name: home-dir
