--- a/logging/base/loki/upstream/v1.ConfigMap-loki.yaml
+++ b/logging/base/loki/upstream/v1.ConfigMap-loki.yaml
@@ -1,6 +1,7 @@
 apiVersion: v1
 data:
   config.yaml: |
+    auth_enabled: false
     chunk_store_config:
         chunk_cache_config:
             memcached:
@@ -33,6 +34,8 @@ data:
     ingester:
         chunk_block_size: 262144
         chunk_idle_period: 15m
+        chunk_retain_period: 10h
+        flush_check_period: 10h
         lifecycler:
             heartbeat_period: 5s
             interface_names:
@@ -48,7 +51,11 @@ data:
                         http_client_timeout: 20s
                     store: consul
                 replication_factor: 3
-        max_transfer_retries: 60
+        max_transfer_retries: 0
+        wal:
+            dir: /loki/wal
+            enabled: true
+            replay_memory_ceiling: 9GB
     ingester_client:
         grpc_client_config:
             max_recv_msg_size: 6.7108864e+07
