--- a/logging/base/promtail/configmap.yaml
+++ b/logging/base/promtail/configmap.yaml
@@ -12,7 +12,7 @@ data:
       http_listen_port: 3101
 
     client:
-      url: http://logging-loki.logging:80/loki/api/v1/push
+      url: http://distributor.logging.svc:3100/loki/api/v1/push
 
     positions:
       filename: /run/promtail/positions.yaml
