--- a/monitoring/base/victoriametrics/upstream/rbac/vmstaticscrape_editor_role.yaml
+++ b/monitoring/base/victoriametrics/upstream/rbac/vmstaticscrape_editor_role.yaml
@@ -1,13 +1,13 @@
-# permissions for end users to edit vmpodscrapes.
+# permissions for end users to edit vmstaticscrapes.
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: vmpodscrape-editor-role
+  name: vmstaticscrape-editor-role
 rules:
 - apiGroups:
   - operator.victoriametrics.com
   resources:
-  - vmpodscrapes
+  - vmstaticscrapes
   verbs:
   - create
   - delete
@@ -20,6 +20,6 @@ rules:
 - apiGroups:
   - operator.victoriametrics.com
   resources:
-  - vmpodscrapes/status
+  - vmstaticscrapes/status
   verbs:
   - get
