Remove status field from VMStaticScrape CRD
Signed-off-by: Masayuki Ishii <masa213f@gmail.com>

--- a/monitoring/base/victoriametrics/remove_crd_status.yaml
+++ b/monitoring/base/victoriametrics/remove_crd_status.yaml
@@ -57,3 +57,9 @@ kind: CustomResourceDefinition
 metadata:
   name: vmsingles.operator.victoriametrics.com
 status: null
+---
+apiVersion: apiextensions.k8s.io/v1beta1
+kind: CustomResourceDefinition
+metadata:
+  name: vmstaticscrapes.operator.victoriametrics.com
+status: null
