--- a/monitoring/base/victoriametrics/rbac/editor_aggregation.yaml
+++ b/monitoring/base/victoriametrics/rbac/editor_aggregation.yaml
@@ -53,3 +53,11 @@ metadata:
   labels:
     rbac.authorization.k8s.io/aggregate-to-edit: "true"
     rbac.authorization.k8s.io/aggregate-to-admin: "true"
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: vmstaticscrape-editor-role
+  labels:
+    rbac.authorization.k8s.io/aggregate-to-edit: "true"
+    rbac.authorization.k8s.io/aggregate-to-admin: "true"
