--- a/monitoring/base/victoriametrics/rbac/viewer_aggregation.yaml
+++ b/monitoring/base/victoriametrics/rbac/viewer_aggregation.yaml
@@ -46,3 +46,10 @@ metadata:
   name: vmservicescrape-viewer-role
   labels:
     rbac.authorization.k8s.io/aggregate-to-view: "true"
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: vmstaticscrape-viewer-role
+  labels:
+    rbac.authorization.k8s.io/aggregate-to-view: "true"
