add validation for tenant crd privilege check
Signed-off-by: binoue <banji-inoue@cybozu.co.jp>

--- a/test/Makefile
+++ b/test/Makefile
@@ -115,7 +115,7 @@ $(TSH):
 
 .PHONY: setup
 setup: $(KUBECTL) $(KUSTOMIZE) $(PROMTOOL) $(TSH)
-	go install github.com/onsi/ginkgo/ginkgo
+	go install github.com/onsi/ginkgo/ginkgo@latest
 
 .PHONY: test-tools
 test-tools: staticcheck nilerr
