victoriametrics: pod of smallset run in the same node
Signed-off-by: Yuji Ito <llamerada.jp@gmail.com>

--- a/monitoring/base/victoriametrics/vmagent-smallset.yaml
+++ b/monitoring/base/victoriametrics/vmagent-smallset.yaml
@@ -23,3 +23,13 @@ spec:
     requests:
       cpu: 100m
       memory: 200Mi
+  affinity:
+    podAffinity:
+      requiredDuringSchedulingIgnoredDuringExecution:
+      - labelSelector:
+          matchLabels:
+            app.kubernetes.io/component: monitoring
+            app.kubernetes.io/instance: vmsingle-smallset
+            app.kubernetes.io/name: vmsingle
+            managed-by: vm-operator
+        topologyKey: kubernetes.io/hostname
