Use kube-state-metrics-telemetry for its job name
Signed-off-by: Daichi Sakaue <daichi-sakaue@cybozu.co.jp>

--- a/monitoring/base/victoriametrics/rules/kube-state-metrics-scrape.yaml
+++ b/monitoring/base/victoriametrics/rules/kube-state-metrics-scrape.yaml
@@ -26,7 +26,7 @@ spec:
 apiVersion: operator.victoriametrics.com/v1beta1
 kind: VMPodScrape
 metadata:
-  name: kube-state-metrics
+  name: kube-state-metrics-telemetry
   namespace: monitoring
   labels:
     smallset: "true"
@@ -39,5 +39,5 @@ spec:
   podMetricsEndpoints:
   - port: telemetry
     relabelConfigs:
-      - replacement: kube-state-metrics
+      - replacement: kube-state-metrics-telemetry
         targetLabel: job
