--- a/monitoring/base/victoriametrics/rules/kube-state-metrics-alertrule.yaml
+++ b/monitoring/base/victoriametrics/rules/kube-state-metrics-alertrule.yaml
@@ -9,26 +9,28 @@ spec:
     rules:
     - alert: KubeStateMetricsListErrors
       annotations:
-        message: kube-state-metrics is experiencing errors at an elevated rate in list
+        summary: kube-state-metrics is experiencing errors at an elevated rate in list
           operations. This is likely causing it to not be able to expose metrics about
           Kubernetes objects correctly or at all.
+        runbook: TBD
       expr: |
-        (sum(rate(kube_state_metrics_list_total{job="kube-state-metrics",result="error"}[5m]))
+        (sum(rate(kube_state_metrics_list_total{job="kube-state-metrics-telemetry",result="error"}[5m]))
           /
-        sum(rate(kube_state_metrics_list_total{job="kube-state-metrics"}[5m])))
+        sum(rate(kube_state_metrics_list_total{job="kube-state-metrics-telemetry"}[5m])))
         > 0.01
       for: 15m
       labels:
         severity: error
     - alert: KubeStateMetricsWatchErrors
       annotations:
-        message: kube-state-metrics is experiencing errors at an elevated rate in watch
+        summary: kube-state-metrics is experiencing errors at an elevated rate in watch
           operations. This is likely causing it to not be able to expose metrics about
           Kubernetes objects correctly or at all.
+        runbook: TBD
       expr: |
-        (sum(rate(kube_state_metrics_watch_total{job="kube-state-metrics",result="error"}[5m]))
+        (sum(rate(kube_state_metrics_watch_total{job="kube-state-metrics-telemetry",result="error"}[5m]))
           /
-        sum(rate(kube_state_metrics_watch_total{job="kube-state-metrics"}[5m])))
+        sum(rate(kube_state_metrics_watch_total{job="kube-state-metrics-telemetry"}[5m])))
         > 0.01
       for: 15m
       labels:
