[ci skip][wip] debug
Signed-off-by: Yuji Ito <llamerada.jp@gmail.com>

--- a/logging/base/fluent-bit/patch.yaml
+++ b/logging/base/fluent-bit/patch.yaml
@@ -4,7 +4,11 @@ kind: PodSecurityPolicy
 metadata:
   name: logging-fluent-bit
 spec:
-  readOnlyRootFilesystem: true
+  # readOnlyRootFilesystem: true
+  allowPrivilegeEscalation: true
+  # This is redundant with non-root + disallow privilege escalation,
+  # but we can provide it for defense in depth.
+  requiredDropCapabilities: []
 ---
 $patch: delete
 apiVersion: v1
