[ci skip] Revert "debug"
This reverts commit 12b2b70da82e71f8533a9be0b861e36a0b2ce355.

Signed-off-by: Yuji Ito <llamerada.jp@gmail.com>

--- a/logging/base/fluent-bit/patch.yaml
+++ b/logging/base/fluent-bit/patch.yaml
@@ -4,11 +4,7 @@ kind: PodSecurityPolicy
 metadata:
   name: logging-fluent-bit
 spec:
-  # readOnlyRootFilesystem: true
-  allowPrivilegeEscalation: true
-  # This is redundant with non-root + disallow privilege escalation,
-  # but we can provide it for defense in depth.
-  requiredDropCapabilities: []
+  readOnlyRootFilesystem: true
 ---
 $patch: delete
 apiVersion: v1
