--- a/logging/base/promtail/upstream/promtail.yaml
+++ b/logging/base/promtail/upstream/promtail.yaml
@@ -62,7 +62,7 @@ stringData:
       http_listen_port: 3101
     
     client:
-      url: http://loki-gateway/loki/api/v1/push
+      url: http://logging-loki:3100/loki/api/v1/push
     
     positions:
       filename: /run/promtail/positions.yaml
