--- a/logging/base/loki-canary/patch.yaml
+++ b/logging/base/loki-canary/patch.yaml
@@ -6,6 +6,14 @@ metadata:
 spec:
   template:
     spec:
+      containers:
+        - name: loki-canary
+          command: ["/usr/local/loki/bin/loki-canary"]
+          ports:
+          # use default port of loki-canary
+          - $patch: replace
+          - name: http-metrics
+            containerPort: 3500
       tolerations:
         - key: cke.cybozu.com/role
           operator: Equal
