--- a/logging/base/loki/patch.yaml
+++ b/logging/base/loki/patch.yaml
@@ -1,4 +1,43 @@
 apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: distributor
+  namespace: logging
+spec:
+  template:
+    spec:
+      containers:
+        - name: distributor
+          resources:
+            limits: null
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: query-frontend
+  namespace: logging
+spec:
+  template:
+    spec:
+      containers:
+        - name: query-frontend
+          resources:
+            limits: null
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: table-manager
+  namespace: logging
+spec:
+  template:
+    spec:
+      containers:
+        - name: table-manager
+          resources:
+            limits: null
+---
+apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: compactor
@@ -62,6 +101,8 @@ spec:
                 secretKeyRef:
                   name: loki-bucket
                   key: AWS_SECRET_ACCESS_KEY
+          resources:
+            limits: null
       terminationGracePeriodSeconds: 300
 ---
 apiVersion: apps/v1
