logging: change labelname to get log entry for loki-canary
Signed-off-by: Toshikuni Fukaya <toshikuni-fukaya@cybozu.co.jp>

--- a/logging/base/loki-canary/upstream/apps-v1.DaemonSet-loki-canary.yaml
+++ b/logging/base/loki-canary/upstream/apps-v1.DaemonSet-loki-canary.yaml
@@ -17,7 +17,7 @@ spec:
       - args:
         - -addr=query-frontend.logging.svc:3100
         - -interval=100ms
-        - -labelname=instance
+        - -labelname=pod
         - -labelvalue=$(POD_NAME)
         - -size=1024
         - -wait=3m
