use configMapGenerator to generate promtail config
Signed-off-by: UMEZAWA Takeshi <takeshi-umezawa@cybozu.co.jp>

--- a/logging/base/promtail/kustomization.yaml
+++ b/logging/base/promtail/kustomization.yaml
@@ -3,7 +3,10 @@ kind: Kustomization
 namespace: logging
 resources:
   - upstream/promtail.yaml
-  - configmap.yaml
+configMapGenerator:
+  - name: loki-promtail
+    files:
+      - config/promtail.yaml
 patchesStrategicMerge:
   - patch.yaml
 images:
