logging: fix connection issue on loki-canary
Signed-off-by: Toshikuni Fukaya <toshikuni-fukaya@cybozu.co.jp>

--- a/logging/base/loki-canary/upstream/apps-v1.DaemonSet-loki-canary.yaml
+++ b/logging/base/loki-canary/upstream/apps-v1.DaemonSet-loki-canary.yaml
@@ -15,8 +15,7 @@ spec:
     spec:
       containers:
       - args:
-        - -addr=query-frontend.logging.svc:3100
-        - -interval=100ms
+        - -addr=querier.logging.svc:3100
         - -labelname=pod
         - -labelvalue=$(POD_NAME)
         - -size=1024
