team-management: generate manifests automatically
Signed-off-by: Daichi Sakaue <daichi-sakaue@cybozu.co.jp>

--- a/.gitignore
+++ b/.gitignore
@@ -11,9 +11,14 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
+# Ignore CI files
+/CACHE_VERSION
+
 # Ignore downloaded files
 /logging/bin
 /rook/bin
+/team-management/template/bin
+/team-management/template/download
 
 # Editors
 *~
